<resources>
    <string name="app_name">Power Up Scouting</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="autonomous">Autonomous</string>
    <string name="teleop">Teleop</string>
    <string name="teamNumber">Team Number</string>
    <string name="matchNumber">Match Number</string>
    <string name="autonomousPeriod">Autonomous Period</string>
    <string name="startBlock">Started with a block</string>
    <string name="blockDropped">Block Dropped</string>
    <string name="blockPlaced">Block Placed</string>
    <string name="Switch">Switch</string>
    <string name="scale">Scale</string>
    <string name="crossedLine">Crossed Line</string>
    <string name="blocksPU">Blocks Picked Up</string>
    <string name="allianceSwitchBlocks">All. Switch Blocks</string>
    <string name="opponentSwitchBlocks">Op. Switch Blocks</string>
    <string name="scaleBlocks">Scale Blocks</string>
    <string name="exchangeBlocks">Blocks in Exchange</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="levitate">Levitate</string>
    <string name="force">Force</string>
    <string name="boost">Boost</string>
    <string name="climbing">Climbing</string>
    <string name="noClimb">Did Not Climb</string>
    <string name="failClimb">Failed to Climb</string>
    <string name="wrungClimb">Climbed Onto Wrung</string>
    <string name="roboClimb">Climbed Using Other Robot</string>
    <string name="numOnThisClimb">Number of Robots Climbing On This One</string>
    <string name="zero">0</string>
    <string name="write">Write to File</string>
    <string name="action_settings">Settings</string>
    <string name="buttonWidth">35dp</string>
    <string name="OverwriteMessage">Data for this match and Team Number already exists on this device. Would you like to overwrite it?</string>
    <string name="Overwrite">Overwrite</string>
    <string name="ChangeMatchNumber">Change Match Number</string>
    <string name="ChangeTeam">Change Team Number</string>
    <string name="title_activity_main_scout_scroll">MainScoutScroll</string>
    <string name="switchToAutonomous">Switch to Autonomous</string>
    <string name="switchToTeleop">Switch to Teleop</string>
    <string name="title_activity_tabbed_auto_tele">tabbedAutoTele</string>
</resources>
