<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brado.powerupscouting.ScoutingActivity$PlaceholderFragment"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Team Number"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteY="3dp" />

                <EditText
                    android:id="@+id/teamNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="number"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Match Number"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/matchNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/lineCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Crossed Line"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/dropCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Block Dropped"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/blockPlaceCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Block Placed:"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switchScale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="switchClick"
                    android:text="Switch"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Scale"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:lines="1"
                    android:text="Pos:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ToggleButton
                    android:id="@+id/DNS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="position"
                    android:text="DNS"
                    android:textOff="DNS"
                    android:textOn="DNS"
                    android:textSize="18sp"
                    tools:text="Left" />

                <ToggleButton
                    android:id="@+id/posL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:onClick="position"
                    android:text="Left"
                    android:textOff="Left"
                    android:textOn="Left"
                    android:textSize="18sp"
                    tools:text="Left" />

                <ToggleButton
                    android:id="@+id/posM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="position"
                    android:text="Middle"
                    android:textOff="Mid"
                    android:textOn="Middle"
                    android:textSize="18sp" />

                <ToggleButton
                    android:id="@+id/posR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="position"
                    android:text="Right"
                    android:textOff="Right"
                    android:textOn="Right"
                    android:textSize="18sp" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blocksPU"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/blocksPUAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/blocksPUPlusAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="plusBlocksAuto"
                        android:text="@string/plus"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/blocksPUMinusAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="minusBlocksAuto"
                        android:text="@string/minus"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/allSwitchBlocks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allianceSwitchBlocks"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/blocksASwitchAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="plusASwitchAuto"
                        android:text="@string/plus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="minusASwitchAuto"
                        android:text="@string/minus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/opponentSwitchBlocksTextAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opponentSwitchBlocks"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/blocksOSwitchAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/blocksOSwitchPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="plusOSwitchAuto"
                        android:text="@string/plus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/blocksOSwitchMinus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="minusOSwitchAuto"
                        android:text="@string/minus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/scaleBlocksTextAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scaleBlocks"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/blocksScaleAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/blocksScalePlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="plusScaleAuto"
                        android:text="@string/plus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/blocksScaleMinus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="minusScaleAuto"
                        android:text="@string/minus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exchangeBlocks"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/blocksExchangeAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/exchangePlusAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="plusThingAuto"
                        android:text="@string/plus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/exchangeMinusAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="minusThingAuto"
                        android:text="@string/minus"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/teamDataAuto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="\n\n\n\n\n\n\n\n\n\n"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="686dp" />


        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>